# RayCaster3000

./: CMakeLists.txt  Config.h  README.md  main.cpp
Cameras/: Camera.cpp  Camera.h
Debug/: Config.h  LeakCounter.h
File IO/: Basic_IO.cpp  Basic_IO.h  Composer.cpp  Composer.h  Json_components.h  Parser.cpp  Parser.h
INFO/: README.md  RayCaster3000.docx  diffuse.scene  disc_mirror.scene  mirrors.scene  specular_and_mirror.scene
Lights/: AmbientLight.cpp  AmbientLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
Modals/: Modal.cpp  Modal.h
Modals/Materials/: Material.cpp  Material.h
Modals/Shapes/: Disk.cpp  Disk.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
Primitives/: Color.cpp  Color.h  Intersection.cpp  Intersection.h  Ray.cpp  Ray.h  Vector3.cpp  Vector3.h
Scenes/: Render.cpp  Render.h  Scene.cpp  Scene.h  Settings.h
